--- a/Text_Classification_Trying_different_Model_Architectures.ipynb
+++ b/Text_Classification_Trying_different_Model_Architectures.ipynb
@@ -6,7 +6,7 @@
       "name": "Text Classification - Trying different Model Architectures",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgC4nTUFvQW9rMPy/XIByI",
+      "authorship_tag": "ABX9TyOUHKtfCXf7o4uR6KnSLvox",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Setup the Environment"
+        "# Setup the Environment"
       ]
     },
     {
